User Manager Realise

--- a/src/main/resources/templates/main/header.html
+++ b/src/main/resources/templates/main/header.html
@@ -6,7 +6,8 @@
         <title th:text="${title}" />
     </head>
     <body>
-    <div style="float: left"><a href="/">Home</a> | <a href="/users">Users</a></div>
+    <div style="float: left"><a href="/">Home</a> | <a href="/inject">Inject</a>
+        | <a href="/user">Users</a> | <a href="/user/new">Add new User</a></div>
     <div style="float: right">
         <form action="/logout" method="post">
             <input type="submit" value="Logout" />
