--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -1,4 +1,14 @@
 <header th:insert="main/header :: header"></header>
 <h1>Users</h1>
-List of users
+<div th:each="row : ${allusers}">
+    <div> User Id: <span th:text="${row.id}" /></div>
+    <div> User Name: <span th:text="${row.userName}" /></div>
+    <div> First Name: <span th:text="${row.firstName}" /></div>
+    <div> Last Name: <span th:text="${row.lastName}" /></div>
+    <div> Last Name: <span th:text="${row.status}" /></div>
+    <div> Date of creation: <span th:text="${row.createdAt}" /></div>
+    <div> Review: <a th:href="@{/user/} + ${row.id}">Details</a></div>
+    <div> Edit User: <a th:href="@{/user/} + ${row.id} + @{/edit/}">Edit</a></div>
+    <div style="border-bottom: 1px solid black;margin: 5px 0px 10px 0px"></div>
+</div>
 <footer th:insert="main/footer :: footer"></footer>
