1) Added Readme 2) Docker - Fixed? 3) Test done! 4) users -> user_accounts - Done! 5) Status - deleted value 6) Deleted comments, Set<Role> used in adding roles to DB 7) Deleted UAM, userMain() -> getMainPage(), userLogin -> getLoginPage() 8) Changed: userMain() -> getAllUsersPage(), list -> dtos, "allusers" -> "allUsers", userDetails -> getUserDetailsPage(), /userdetails -> /userDetails, userNew -> getAddNewUserPage(), userAdd -> addUser, userEdit -> getEditUserPage(), /useredit -> /editUser, /usernew -> /addNewUser, userEdited -> editUser 9) Deleted redundant method 10) Deleted redundant constructor 11) Deleted cs 12) Deleted commented code 13) Deleted WebSecurityInitializer 14) Deleted spagetti code from RoleRepository 15) UserStatusFilter - I would like to add my custom filter 16) JwtTokenProvider - changed namning and deleted space 17) Added @Override + otElseThrow 18) Validation done! 19) Змінюю ось тут: /{id}/edit 20) Validation messages ready

--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -1,6 +1,6 @@
 <header th:insert="main/header :: header"></header>
 <h1>Users</h1>
-<div th:each="row : ${allusers}">
+<div th:each="row : ${allUsers}">
     <div> User Id: <span th:text="${row.id}" /></div>
     <div> User Name: <span th:text="${row.userName}" /></div>
     <div> First Name: <span th:text="${row.firstName}" /></div>
