--- a/src/main/resources/templates/addNewUser.html
+++ b/src/main/resources/templates/addNewUser.html
@@ -1,17 +1,18 @@
 <header th:insert="main/header :: header"></header>
 <h1>Add new user</h1>
-<form th:action = "@{/user/new}" method="post">
-  <input type="text" placeholder="Enter login" name="userName" />
-  <input type="text" placeholder="Enter password" name="userPassword" />
-  <input type="text" placeholder="Enter First name" name="firstName" />
-  <input type="text" placeholder="Enter Last name" name="lastName" />
+<form th:action = "@{/user/new}" method="post" th:object="${userAccount}">
+  <input type="text" placeholder="Enter login" th:field="*{userName}" />
+  <div style="color:red" th:if="${#fields.hasErrors('userName')}" th:errors="*{userName}">Name error</div>
+  <input type="text" placeholder="Enter password" th:field="*{password}" />
+  <input type="text" placeholder="Enter First name" th:field="*{firstName}" />
+  <input type="text" placeholder="Enter Last name" th:field="*{lastName}" />
   <select name="status">
-    <option value="0">Active</option>
-    <option value="1">Inactive</option>
+    <option value="ACTIVE">Active</option>
+    <option value="INACTIVE">Inactive</option>
   </select>
   <select name="role">
-    <option value="0">Admin</option>
-    <option value="1">User</option>
+    <option value="ADMIN">Admin</option>
+    <option value="USER">User</option>
   </select>
   <input type="submit" value="Add" />
 </form>
