--- a/src/main/resources/templates/addNewUser.html
+++ b/src/main/resources/templates/addNewUser.html
@@ -2,7 +2,7 @@
 <h1>Add new user</h1>
 <form th:action = "@{/user/new}" method="post" th:object="${userAccount}">
   <input type="text" placeholder="Enter login" th:field="*{userName}" />
-  <div style="color:red" th:if="${#fields.hasErrors('userName')}" th:errors="*{userName}">Name error</div>
+  <div style="color:red;" th:if="${#fields.hasErrors('userName')}" th:errors="*{userName}">Name error</div>
   <input type="text" placeholder="Enter password" th:field="*{password}" />
   <input type="text" placeholder="Enter First name" th:field="*{firstName}" />
   <input type="text" placeholder="Enter Last name" th:field="*{lastName}" />
